homeworks/kuber-2.3/deployment-2-3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: nginx-http
        volumeMounts:
        - name: nginx-configmap-vol
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: mtool-http
      volumes:
      - name: nginx-configmap-vol
        configMap:
          name: nginx-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-serv
spec:
  selector:
    app: nginx
  ports:
  - name: svc-nginx-http
    protocol: TCP
    port: 3003
    targetPort: nginx-http
  - name: svc-mtool-http
    protocol: TCP
    port: 9003
    targetPort: mtool-http
