homeworks/kuber-2.3/deployment-2-3-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    app: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: nginx-http
        volumeMounts:
        - name: nginx-configmap-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-configmap-vol
        configMap:
          name: nginx-configmap2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-serv
spec:
  selector:
    app: nginx2
  ports:
  - name: svc-nginx-http2
    protocol: TCP
    port: 80
    targetPort: nginx-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
      - ingress-test.com
    secretName: secret-tls
  rules:
  - host: ingress-test.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
             name: nginx-serv
             port:
               number: 80
